# ff

./: .gitignore  .gitmodules  GOVERNANCE.md  LICENSE  README.md  pyproject.toml  requirements.txt  stats.py  test_avg_passing.py  test_pts.ipynb  test_pts.py  top-ten-qbs.py
.ipynb_checkpoints/: test_pts-checkpoint.ipynb
docs/: .gitignore  bayes_ffootball.aux  bayes_ffootball.bbl  bayes_ffootball.blg  bayes_ffootball.ilg  bayes_ffootball.nlo  bayes_ffootball.nls  bayes_ffootball.tex  ref.bib
model/: backtest.org  backtest_rwm.org  config.py  deleteme.csv  ffbhm.py  footbal_smoothing.org  football.html  football.ipynb  football.org  football_autocorrelation.html  football_autocorrelation.org  football_back_test.org  football_rolling_regression.ipynb  football_stochastic_variability.ipynb  hier_bayes_soccer.ipynb  nfldbim.py  out.csv  premier_league.txt  premier_league_13_14_table.csv  rugby.html  rugby.org  shelve.out  simuls.csv  soccer.html  soccer.org  soccer.py  spread.py  teams.csv  teams.pickle  test_avg_passing.py  test_pts.py
model/other_sports/: rugby.org
notebooks/: football.ipynb
optimizers/: naive_picker.m
ruby_scrapers/: cbs_spread_2017.csv  cbs_spread_scraper.rb  espn_actl.csv  espn_actl_scraper.rb  espn_err.csv  espn_err.rb  espn_proj.csv  espn_proj_scraper.rb  espn_scraper.rb  fanduel_load_dom.js  fanduel_scraper.rb  gametime_scraper.rb  odds.rb  spread.csv
scripts/: run_2025_backtest.py  run_ar1_experiment.py  run_calibration_experiment.py  run_carryover_experiment.py  run_multiseason_backtest.py  run_per_team_alpha_experiment.py  run_per_team_home_experiment.py
src/: analysis.py  backtest.py  compare.py  config.py  data.py  model.py  stats.py
tests/: test_analysis.py  test_backtest.py  test_data.py  test_model.py  test_optimizer.py  test_scoring.py
(+1 files in other folders)
