[project]
name = "ff"
version = "0.3.0"
description = "NFL game prediction via hierarchical Bayesian modeling, with fantasy scoring and DFS optimization"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy",
    "numpy",
    "matplotlib",
    "pulp",
    "polars",
    "pymc",
    "arviz",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
