[project]
name = "ff"
version = "0.3.0"
description = "NFL game prediction via hierarchical Bayesian modeling, with fantasy scoring and DFS optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Edgar Galvan"},
]
keywords = ["nfl", "bayesian", "prediction", "fantasy-football", "pymc", "sports-analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nflreadpy",
    "numpy",
    "matplotlib",
    "pulp",
    "polars",
    "pymc",
    "arviz",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
